# TGSToolkits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TodoLists.txt  build.sh
cmake/: CMakeUtils.cmake
inc/: CMakeLists.txt  tgstk_comms.h
inc/comms/: comms_types.h
inc/comms/cmake/: source.cmake
inc/iters/cmake/: source.cmake
inc/iters/list/: list_comms.h  normal_list.h
inc/iters/list/cmake/: source.cmake
inc/iters/tree/: adt.h  avl.h  btree.h  tree_comms.h
inc/iters/tree/cmake/: source.cmake
inc/maths/: maths.h
inc/maths/cmake/: source.cmake
inc/sorts/: bubble_sort.h  cocktail_shaker_sort.h  comb_sort.h  dual_pivot_quick_sort.h  gnome_sort.h  odd_even_sort.h  optimized_gnome_sort.h  quick_sort.h  sort_comms.h  stable_quick_sort.h
inc/sorts/cmake/: source.cmake
src/: CMakeLists.txt
src/comms/: comm_defs.h  comm_headers.h  comm_logger.cpp  comm_logger.h  comm_mems.cpp  comm_mems.h
src/comms/cmake/: source.cmake
src/iters/cmake/: source.cmake
src/iters/list/: list_comms.cpp
src/iters/list/NormalList/: normal_list.cpp
src/iters/list/cmake/: source.cmake
src/iters/tree/: tree_comms.cpp
src/iters/tree/ADT/: adt.cpp
src/iters/tree/AVL/: avl.cpp
src/iters/tree/BTree/: btree.cpp
src/iters/tree/cmake/: source.cmake
src/maths/: maths.cpp
src/maths/cmake/: source.cmake
src/sorts/: sort_comms.cpp
src/sorts/BubbleSort/: bubble_sort.cpp
src/sorts/CocktailShakerSort/: cocktail_shaker_sort.cpp
src/sorts/CombSort/: comb_sort.cpp
src/sorts/DualPivotQuickSort/: dual_pivot_quick_sort.cpp
src/sorts/GnomeSort/: gnome_sort.cpp
src/sorts/OddEvenSort/: odd_even_sort.cpp
src/sorts/OptimizedGnomeSort/: optimized_gnome_sort.cpp
src/sorts/QuickSort/: quick_sort.cpp
src/sorts/StableQuickSort/: stable_quick_sort.cpp
src/sorts/cmake/: source.cmake
testers/: CMakeLists.txt
testers/comms/: tester_comms.h
testers/comms/cmake/: source.cmake
testers/iters/: CMakeLists.txt  tester_adt.cpp  tester_avl.cpp  tester_btree.cpp  tester_normal_list.cpp
testers/iters/cmake/: source.cmake
testers/sorts/: CMakeLists.txt  tester_bubble_sorts.cpp  tester_cocktail_shaker_sorts.cpp  tester_comb_sorts.cpp  tester_dual_pivot_quick_sorts.cpp  tester_gnome_sorts.cpp  tester_odd_even_sorts.cpp  tester_optimized_gnome_sorts.cpp  tester_quick_sorts.cpp  tester_stable_quick_sorts.cpp
testers/sorts/cmake/: source.cmake
